# transformer-from-scratch

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py
app/cli/: tokenize.py
app/data/tokenizers/: __init__.py  base.py  bpe.py  sentencepiece.py  whitespace.py  wordpiece.py
app/data/vocabulary/: __init__.py  base.py  specials.py  utils.py  vocabulary.py
app/papers/attention_is_all_you_need/: NOTES.md  README.md
app/papers/attention_is_all_you_need/modules/: embeddings.py  positional_encoding.py
tests/papers/: test_whitespace.py
